--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -642,6 +642,175 @@
     "- [`PDAL filters.transformation`](https://pdal.io/en/latest/stages/filters.transformation.html#matrix)\n",
     "-  [`Fit a stem vector to TLS trees data`](https://laempy.github.io/pyoints/tutorials/stem_detection.html)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Transformation & ICP"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np\n",
+    "import matplotlib.pyplot as plt\n",
+    "import open3d as o3d\n",
+    "import copy"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "source = o3d.io.read_point_cloud()\n",
+    "target = o3d.io.read_point_cloud()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "o3d.visualization.draw_plotly([source],\n",
+    "                                  zoom=0.455,\n",
+    "                                  front=[-0.4999, -0.1659, -0.8499],\n",
+    "                                  lookat=[2.1813, 2.0619, 2.0999],\n",
+    "                                  up=[0.1204, -0.9852, 0.1215])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "o3d.visualization.draw_plotly([target],\n",
+    "                                  zoom=0.455,\n",
+    "                                  front=[-0.4999, -0.1659, -0.8499],\n",
+    "                                  lookat=[2.1813, 2.0619, 2.0999],\n",
+    "                                  up=[0.1204, -0.9852, 0.1215])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def draw_registration_result(source, target, transformation):\n",
+    "    source_temp = copy.deepcopy(source)\n",
+    "    target_temp = copy.deepcopy(target)\n",
+    "    source_temp.paint_uniform_color([1, 0.706, 0])\n",
+    "    target_temp.paint_uniform_color([0, 0.651, 0.929])\n",
+    "    source_temp.transform(transformation)\n",
+    "    o3d.visualization.draw_plotly([source_temp, target_temp])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Intitial transformation to initialize the registration"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "trans_init = np.asarray([[0.862, 0.011, -0.507, 0.5],\n",
+    "                         [-0.139, 0.967, -0.215, 0.7],\n",
+    "                         [0.487, 0.255, 0.835, -1.4], [0.0, 0.0, 0.0, 1.0]])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "draw_registration_result(source, target, trans_init)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "threshold=0.02\n",
+    "print(\"Initial alignment\")\n",
+    "evaluation = o3d.pipelines.registration.evaluate_registration(\n",
+    "    source, target, threshold, trans_init)\n",
+    "print(evaluation)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Start the Iterative Closest Point (Point-to-Point)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "threshold=0.02\n",
+    "print(\"Apply point-to-point ICP\")\n",
+    "reg_p2p = o3d.pipelines.registration.registration_icp(\n",
+    "    source, target, threshold, trans_init,\n",
+    "    o3d.pipelines.registration.TransformationEstimationPointToPoint())\n",
+    "print(reg_p2p)\n",
+    "print(\"Transformation is:\")\n",
+    "print(reg_p2p.transformation)\n",
+    "draw_registration_result(source, target, reg_p2p.transformation)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "evaluation = o3d.pipelines.registration.evaluate_registration(\n",
+    "    source, target, threshold, trans_init)\n",
+    "print(evaluation)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Start the Iterative Closest Point (Point-to-Plane)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "threshold=0.02\n",
+    "print(\"Apply point-to-point ICP\")\n",
+    "reg_p2p = o3d.pipelines.registration.registration_icp(\n",
+    "    source, target, threshold, trans_init,\n",
+    "    o3d.pipelines.registration.TransformationEstimationPointToPlane())\n",
+    "print(reg_p2p)\n",
+    "print(\"Transformation is:\")\n",
+    "print(reg_p2p.transformation)\n",
+    "draw_registration_result(source, target, reg_p2p.transformation)"
+   ]
   }
  ],
  "metadata": {
